--- a/index.html
+++ b/index.html
@@ -73,37 +73,31 @@
 
 <!--bagian about-->
 
- <section id="about" class="about" class="scrollsapy">
-   <div clas="container">
+ <section id="about" class="about">
+      <div class="container">
         <div class="row">
-          <h3 class="center light grey-text text-darken-3"> Abuot Us</h3>
+          <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6 light">
-          <h5> Kami Ahlinya</h5>
-          <p>Kami Ahli dalam dhdskhdkshdkshdskdsd, sjdhsdhskhdkshds, sdhskdshkdhskd, djskdjskdjksdhkshds, jksdjskdksdhskdhs,ksdkshdkshks,
-          sdkjsdjksjdks, skdhsdisdjdis, sdjskdjskdhskdhccxcxcxcxcx, xcxcxcxcxnnjcdcjdcjdjd, jkdcdkhkdhdkhv, djpfhskhfklhfklhfs.</p>
+            <h5>We Are Professionals</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi quo accusantium repellat similique ipsa doloribus in aliquam earum eaque, possimus necessitatibus sunt repellendus ullam recusandae voluptas dolore debitis saepe facere.</p>
           </div>
-
-        <div class="col m6 light">
-         <p>WEB DEVELOPMENT</p>
-        <div class="progress">
-          <div class="determinate blue" style="width: 95%"></div>
-        </div>
-        
-        <p>WEB MOBILE PROGRAMMING</p>
-        <div class="progress">
-          <div class="indeterminate blue" style="width: 100%"></div>
-        </div>
-        
-        <p>VISUAL DEVELOPMENT</p>
-        <div class="progress">
-          <div class="determinate blue" style="width: 95%"></div>
-        </div>
-
-        </div>
+          <div class="col m6 light">
+            <p>WEB DEVELOPMENT</p>
+            <div class="progress">
+                <div class="determinate blue" style="width: 95%"></div>
+            </div>
+            <p>MOBILE APP DEVELOPMENT</p>
+            <div class="progress">
+                <div class="determinate blue" style="width: 85%"></div>
+            </div>
+            <p>GAME DEVELOPMENT</p>
+            <div class="progress">
+                <div class="determinate blue" style="width: 90%"></div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
 
 <!--Paralax klient-->
